--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.section {
+  flex: 1;
+}
+
+iframe {
+  width: 100%;
+  height: 99vh;
+  overflow: scroll;
+}
+
+#ace-editor {
+  width: 100% !important;
+  height: 99vh !important;
+  overflow: scroll;
 }
